fix: drop z-index

--- a/src/index.css
+++ b/src/index.css
@@ -33,7 +33,6 @@ body {
   min-width: 100%;
   width: 100%;
   height: 100%;
-  z-index: -1;
   position: fixed;
   top: 0;
   left: 0;
